SDKs/apideck.com/webhook/9.1.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/apideck.com/webhook/9.1.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.WebhooksAddRequest{
        Security: operations.WebhooksAddSecurity{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
        },
        Headers: operations.WebhooksAddHeaders{
            XApideckAppID: "unde",
        },
        Request: shared.CreateWebhookRequest{
            DeliveryURL: "https://example.com/my/webhook/endpoint",
            Description: "A description",
            Events: []shared.WebhookEventTypeEnum{
                "crm.company.created",
                "crm.company.created",
                "crm.company.created",
            },
            Status: "enabled",
            UnifiedAPI: "crm",
        },
    }

    ctx := context.Background()
    res, err := s.Webhooks.WebhooksAdd(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.CreateWebhookResponse != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### Webhooks

* `WebhooksAdd` - Create webhook subscription
* `WebhooksAll` - List webhook subscriptions
* `WebhooksDelete` - Delete webhook subscription
* `WebhooksExecute` - Execute a webhook
* `WebhooksOne` - Get webhook subscription
* `WebhooksResolve` - Resolve and Execute a connection webhook
* `WebhooksShortExecute` - Execute a webhook
* `WebhooksUpdate` - Update webhook subscription
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
