SDKs/apideck.com/webhook/9.3.1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/apideck.com/webhook/9.3.1/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import(
	"context"
	"log"
	"openapi"
	"openapi/pkg/models/operations"
	"openapi/pkg/models/shared"
)

func main() {
    s := sdk.New()

    ctx := context.Background()
    res, err := s.Webhooks.WebhooksAdd(ctx, operations.WebhooksAddRequest{
        CreateWebhookRequest: shared.CreateWebhookRequest{
            DeliveryURL: "https://example.com/my/webhook/endpoint",
            Description: sdk.String("A description"),
            Events: []shared.WebhookEventTypeEnum{
                shared.WebhookEventTypeEnumCrmCompanyCreated,
                shared.WebhookEventTypeEnumCrmCompanyCreated,
                shared.WebhookEventTypeEnumCrmCompanyCreated,
            },
            Status: shared.StatusEnumEnabled,
            UnifiedAPI: shared.UnifiedAPIIDEnumCrm,
        },
        XApideckAppID: "provident",
    }, operations.WebhooksAddSecurity{
        APIKey: "YOUR_API_KEY_HERE",
    })
    if err != nil {
        log.Fatal(err)
    }

    if res.CreateWebhookResponse != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### [Webhooks](docs/webhooks/README.md)

* [WebhooksAdd](docs/webhooks/README.md#webhooksadd) - Create webhook subscription
* [WebhooksAll](docs/webhooks/README.md#webhooksall) - List webhook subscriptions
* [WebhooksDelete](docs/webhooks/README.md#webhooksdelete) - Delete webhook subscription
* [WebhooksExecute](docs/webhooks/README.md#webhooksexecute) - Execute a webhook
* [WebhooksOne](docs/webhooks/README.md#webhooksone) - Get webhook subscription
* [WebhooksResolve](docs/webhooks/README.md#webhooksresolve) - Resolve and Execute a connection webhook
* [WebhooksShortExecute](docs/webhooks/README.md#webhooksshortexecute) - Execute a webhook
* [WebhooksUpdate](docs/webhooks/README.md#webhooksupdate) - Update webhook subscription
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta and therefore, we recommend pinning usage to a specific package version.
This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated and maintained programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
